- update environment properties - update bootstrap version - add warehouse-app as the base ref - add '_id' property to product object - add baseReg property to production build config

--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
+              "baseHref":"/warehouse-app/",
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
